--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ div.head h1{font-family: 'Arapey';
   font-weight: 700; position:absolute;top:-10px;left:470px;}
 .clear{clear:both;}
 #dhead{padding-top:10px;margin-bottom:0px;}
-div.content{margin-top:-300px;margin-left:150px;color:black;width:1050px;height:auto;background-color:#B1C0AF;clear:both;border-radius:5px;overflow:hidden;}
+div.content{margin-top:-300px;margin-left:150px;color:black;width:1050px;height:auto;background-color:#B1C0AF;clear:both;border-radius:5px;overflow:hidden;padding-bottom:17px;}
 .content h1,.content p{font-family: 'Papyrus Regular';
   font-size:1.2em;margin:10px 10px 0px 10px;padding:5px;
   font-weight: 400;}
